--- a/RedSocial/packages.config
+++ b/RedSocial/packages.config
@@ -28,5 +28,7 @@
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="SweetAlert" version="1.0.0" targetFramework="net472" />
+  <package id="SweetAlert.Base" version="1.1.3" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
