--- a/PostsServices/PostsServices.csproj
+++ b/PostsServices/PostsServices.csproj
@@ -204,6 +204,9 @@
     <Compile Include="DB\Posts.cs">
       <DependentUpon>DB.tt</DependentUpon>
     </Compile>
+    <Compile Include="DB\sysdiagrams.cs">
+      <DependentUpon>DB.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
